# coreC_risk_scoring_system

./: CMakeLists.txt  README.md
include/: model.h  profile.h  risk_engine.h  scoring.h  security.h  session.h
src/: model.c  profile.c  risk_engine.c  scoring.c  security.c  session.c
